Bug 1533358 - Details button from the Show Update History is barely visible. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D23594

UltraBlame original commit: 7f3c70bce7e8edc2a5682365da254814cbf68829

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -4719,3 +4719,33 @@ right
 2px
 ;
 }
+richlistitem
+.
+text
+-
+link
+{
+color
+:
+inherit
+;
+text
+-
+decoration
+:
+underline
+;
+}
+richlistitem
+.
+text
+-
+link
+:
+hover
+{
+color
+:
+inherit
+;
+}
